--- a/index.html
+++ b/index.html
@@ -178,9 +178,8 @@
                         <img src="images/testi1.jpg" alt="">
                     </div>
                     <div class="text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ut sequi, voluptas explicabo cum
-                            doloribus ullam vel veniam debitis quia enim. Aut a dolor opt</p>
-                        <h3>Someone Famous</h3>
+                        <p>Working with Michael has been an absolute pleasure! Their expertise and professionalism are                                             truly commendable. From the initial consultation to the final launch of our website, they demonstrated                                    exceptional skills in web development.</p>
+                        <h3>Elizabeth Quashigah</h3>
                     </div>
                 </div>
                 <div class="box">
@@ -188,9 +187,8 @@
                         <img src="images/testi2.jpg" alt="">
                     </div>
                     <div class="text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ut sequi, voluptas explicabo cum
-                            doloribus ullam vel veniam debitis quia enim. Aut a dolor opt</p>
-                        <h3>Someone Famous</h3>
+                        <p>I cannot express enough how impressed I am with Michael's talent and dedication. Working                                               with them was an absolute delight! Michael has an incredible eye for design and a deep                                                   understanding of our brand's aesthetic.</p>
+                        <h3>Michael Zatey</h3>
                     </div>
                 </div>
                 <div class="box">
@@ -198,9 +196,8 @@
                         <img src="images/testi3.jpg" alt="">
                     </div>
                     <div class="text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ut sequi, voluptas explicabo cum
-                            doloribus ullam vel veniam debitis quia enim. Aut a dolor opt</p>
-                        <h3>Someone Famous</h3>
+                        <p>I had the privilege of working with [Photographer's Name] for a special event, and I couldn't be happier with                             the results. Michael is an exceptional talent and a true professional.</p>
+                        <h3>David Ladzro</h3>
                     </div>
                 </div>
             </div>
