--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <img src="images/testi3.jpg" alt="">
                     </div>
                     <div class="text">
-                        <p>I had the privilege of working with [Photographer's Name] for a special event, and I couldn't be happier with                             the results. Michael is an exceptional talent and a true professional.</p>
+                        <p>I had the privilege of working with Michael for a special event, and I couldn't be happier with                                         the results. Michael is an exceptional talent and a true professional.</p>
                         <h3>David Ladzro</h3>
                     </div>
                 </div>
